package main;

public abstract class Loot {
    public abstract String getEffectDescription();
    public abstract String asCsvRecord();
}
